--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,6 +45,28 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reservas">Reservas</a>
                         </li>
+                        
+                        @if (!User.Identity.IsAuthenticated) {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="~/cuenta/crear">Crear cuenta</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="~/cuenta/login">Iniciar sesión</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="~/cuenta/crearrol">Crear Rol</a>
+                            </li>
+                        }
+                        else {
+                            
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="~/cuenta/asociarrol">Asociar Rol</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="~/cuenta/logout">Cerrar sesión</a>
+                            </li>
+                        }
+                        
                     </ul>
                 </div>
             </div>
