Interface d ela vista NOSOTROS

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reservas">Reservas</a>
+                            <a class="nav-link text-dark" href="~/Home/Reservas"  >Reservas</a>
                         </li>
                         
                         @if (!User.Identity.IsAuthenticated) {
