--- a/Views/Home/Habitaciones.cshtml
+++ b/Views/Home/Habitaciones.cshtml
@@ -1,1 +1,24 @@
-<h1>Habitaciones</h1>
+<div class="breadcrumb breadcrumb-1 pos-center">
+    <h1>HABITACIONES</h1>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="title-style-1 marginb30 margint30">
+            <h3>Nuetsras Habitaciones</h3>
+             <p>
+                Nuestras cómodas habitaciones han sido diseñadas y distribuidas con un estilo ....
+                Cada habitación se encuentra equipada para ofrecerle una estadía relajante y placentera;
+                contamos con todas las comunidades para que usted disfrute de un plácido descanso, ofrecemos:
+            </p>  
+            <div class="bd-example">
+                <ul>
+                    <li>WI-FI GRATUITO</li>
+                    <li> AIRE ACONDICIONADO</li>
+                    <li>COCHERA GRATIS</li>
+                </ul>
+            </div>  
+        </div> 
+
+    </div>
+</div>
