--- a/Views/Home/Nosotros.cshtml
+++ b/Views/Home/Nosotros.cshtml
@@ -1,42 +1,38 @@
 <div class="breadcrumb breadcrumb-1 pos-center">
     <h1>LA EMPRESA</h1>
 </div>
-
-<div class="container">
-    <div class="col-lg-7">
-        <div class="title-style-1 marginb30 margint30">
-            <h3>¿Quiénes Somos?</h3>
-            <p>
-                Brindamos servicio de hospedaje al público en general contamos con todas las comunidades para que usted disfrute de un plácido descanso, ofrecemos:
-            </p>  
-            <div class="bd-example">
-                <ul>
-                    <li>WI-FI GRATUITO</li>
-                    <li> AIRE ACONDICIONADO</li>
-                    <li>COCHERA GRATIS</li>
-                </ul>
-            </div>    
-            <p>
-                La recepción está abierta 24 horas
-                Nos encontramos en Campo Verde km 34 av. 1° junio - Pucallpa.
-            </p>        
+<div class="content">
+    <div class="container">
+        <div class="row"> 
+            <div class="col-lg-7">
+                <div class="title-style-1 marginb30 margint30">
+                    <h3>¿Quiénes Somos?</h3>
+                        
+                    <p>
+                       Hospedaje Piero abrió sus puertas el ....... Es un establecimeinto cómodo y acogedor,
+                       ubicado en el distrito de CampoVerde, a 40 min del Aeropuerto Internacional
+                       Capitán FAP David Abensur Rengifo situado en la ciudad de Pucallpa.
+                    </p>  
+                    <h5>Misión</h5>
+                    <p>
+                        Somos una empresa privada, dirigida al sector comercial. Ofrecemos una atención personalizada con 
+                        productos de calidad, logrando con ello la satisfacción del cliente y nos permite darnos a conocer por
+                        nuestros servicios y atención en nuestra localidad.
+                    </p>
+                    <h5>Visión</h5>
+                    <p>
+                        Para el año 2022 lograr un mayor reconocimiento en nuestra localidad por los servicios brindados y 
+                        potenciamiento de nuestra instalación. Ofrecer atención de calidad con el mejor personal capacitado 
+                        para responder y actuar a las necesidades del cliente.
+                    </p>      
+                </div>
+            </div>
+            <div class="col-lg-5 margint30">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRKggY92VjUrR33OAQblUV4cFDj0U3VcrJKH8a72JyrVf1R7V8f" class="img-fluid" alt="Responsive image">
+                <br></br>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQOqceX6Irzi13M9uQO9ses4mE7Sy8ayZHVPw24LjGTC_kTriuE" class="img-fluid" alt="Responsive image">
+           
+            </div>
         </div>
-    </div>
-    <div class="col-lg-5 margint30">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRKggY92VjUrR33OAQblUV4cFDj0U3VcrJKH8a72JyrVf1R7V8f" class="img-fluid" alt="Responsive image">
-    </div>
-    <div class="col-lg-7 col-sm-12">
-        <h5>Misión</h5>
-        <p>
-            Somos una empresa privada, dirigida al sector comercial. Ofrecemos una atención personalizada con 
-            productos de calidad, logrando con ello la satisfacción del cliente y nos permite darnos a conocer por
-             nuestros servicios y atención en nuestra localidad.
-        </p>
-         <h5>Visión</h5>
-         <p>
-             Para el año 2022 lograr un mayor reconocimiento en nuestra localidad por los servicios brindados y 
-             potenciamiento de nuestra instalación. Ofrecer atención de calidad con el mejor personal capacitado 
-             para responder y actuar a las necesidades del cliente.
-         </p>
     </div>
 </div>
