--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,6 +19,18 @@
 </head>
 <body>
     <header>
+        <div class="pre-header"> 
+            <div class="container"> 
+                <div class="row"> 
+                    <div class="pull-left pre-address-b"> 
+                        <p>
+                            <i class="fa fa-map-marker"></i>
+                            "Av.      -Campoverde Ucayali-Perú"
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
@@ -53,15 +65,11 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" href="~/cuenta/login">Iniciar sesión</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" href="~/cuenta/crearrol">Crear Rol</a>
-                            </li>
+                         
                         }
                         else {
                             
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" href="~/cuenta/asociarrol">Asociar Rol</a>
-                            </li>
+                           
                             <li class="nav-item">
                                 <a class="nav-link text-dark" href="~/cuenta/logout">Cerrar sesión</a>
                             </li>
