--- a/Views/Home/Habitaciones.cshtml
+++ b/Views/Home/Habitaciones.cshtml
@@ -19,6 +19,109 @@
                 </ul>
             </div>  
         </div> 
+    
+    
+        <div class="col-lg-4 clearfix col-sm-4 margint30"> 
+            <h4> Habitaciones Individuales </h4>
+            <hr>
+            <p> Cuenta con: </p>
+            <ul class="about-lista">
+                <li> Camas confortables</li>
+                <li> Mesa</li>
+                <li> Silla</li>
+                <li>WIFI Gratis</li>
+                <li>Cochera</li>
+            </ul>
+        </div>
+        <div class="col-lg-8 " >
+            <div class="margint30" >
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQztdoVnGmHtNSRw9BseW3sHNszUDRXUU1y3VmiR56RSOG40UX8" class="img-fluid" alt="Responsive image">
+            </div>
+            
+        </div>
 
+
+        <div class="col-lg-4 clearfix col-sm-4 margint30"> 
+            <h4> Habitaciones Simples </h4>
+            <hr>
+            <p> Cuenta con: </p>
+            <ul class="about-lista">
+                <li> Camas confortables</li>
+                <li> Baño Propio</li>
+                <li> Mesa</li>
+                <li> Silla</li>
+                <li> TV Cable</li>
+                <li>WIFI Gratis</li>
+                <li>Cochera</li>
+            </ul>
+        </div>
+        <div class="col-lg-8">
+        <div class="margint30" >
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSuUZJ7UccwjVugzwijh_LbxIGdGZq3OIWI6MTqa2Tjiy_fJC7q" class="img-fluid" alt="Responsive image">
+        </div>
+        </div>
+
+        
+        <div class="col-lg-4 clearfix col-sm-4 margint30"> 
+            <h4>Habitaciones Dobles </h4>
+            <hr>
+            <p>Cuenta con: </p>
+            <ul class="about-lista">
+                <li>2 Camas confortables</li>
+                <li> Baño Propio</li>
+                <li> Mesa</li>
+                <li> Silla</li>
+                <li> TV Cable</li>
+                <li>WIFI Gratis</li>
+                <li>Cochera</li>
+            </ul>
+        </div>
+        <div class="col-lg-8 margint30">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQBEveW8iYkho_trCxj_B89BdIS8Us1kLMw-H8rAEtlhNVKHkAy" class="img-fluid" alt="Responsive image">
+        </div>
+
+        
+        <div class="col-lg-4 clearfix col-sm-4 margint30"> 
+            <h4>Habitaciones ejecutivas </h4>
+            <hr>
+            <p> Cuenta con: </p>
+            <ul class="about-lista">
+                <li>Camas confortables</li>
+                <li> Baño Propio</li>
+                <li> Mesa</li>
+                <li> Silla</li>
+                <li> TV Cable</li>
+                <li> Aire Acondicionado</li>
+                <li>WIFI Gratis</li>
+                <li>Cochera</li>
+            </ul>
+        </div>
+        <div class="col-lg-8 margint30">
+            <img width="658px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQK0qXbj4mOvq1WYsapHARd592nxpIil5Y3GBrZXBk2w6BtW4rf" class="rounded mx-auto d-block" alt="...">
+            
+        </div>
+
+        
+        <div class="col-lg-4 clearfix col-sm-4 margint30"> 
+            <h4>Habitaciones Junior Suite </h4>
+            <hr>
+            <p> Cuenta con: </p>
+            <ul class="about-lista">
+                <li>Camas confortables</li>
+                <li> Baño Propio</li>
+                <li> Mesa</li>
+                <li> Silla</li>
+                <li> TV Cable</li>
+                <li> Aire Acondicionado</li>
+                <li>WIFI Gratis</li>
+                <li> Jacuzzi</li>
+                <li>Cochera</li>
+            </ul>
+        </div>
+        
+        <div class="col-lg-8 margint30">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRdvrsRFFxTVLAUE9LkWpt9EVIR1as6pL1shansNvgrCTYKezGY" class="rounded mx-auto d-block" alt="...">
+           
+        </div>
     </div>
 </div>
