--- a/Views/Home/Habitaciones.cshtml
+++ b/Views/Home/Habitaciones.cshtml
@@ -1,11 +1,11 @@
-<div class="breadcrumb breadcrumb-1 pos-center">
+<div class="text-center">
     <h1>HABITACIONES</h1>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="title-style-1 marginb30 margint30">
-            <h3>Nuetsras Habitaciones</h3>
+            <h3>Nuetras Habitaciones</h3>
              <p>
                 Nuestras cómodas habitaciones han sido diseñadas y distribuidas con un estilo ....
                 Cada habitación se encuentra equipada para ofrecerle una estadía relajante y placentera;
@@ -19,8 +19,9 @@
                 </ul>
             </div>  
         </div> 
+    </div> 
     
-    
+    <div class="row">
         <div class="col-lg-4 clearfix col-sm-4 margint30"> 
             <h4> Habitaciones Individuales </h4>
             <hr>
@@ -33,14 +34,13 @@
                 <li>Cochera</li>
             </ul>
         </div>
-        <div class="col-lg-8 " >
-            <div class="margint30" >
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQztdoVnGmHtNSRw9BseW3sHNszUDRXUU1y3VmiR56RSOG40UX8" class="img-fluid" alt="Responsive image">
-            </div>
-            
+        <div class="col-lg-8 mt-30" >
+            <img width="658px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQztdoVnGmHtNSRw9BseW3sHNszUDRXUU1y3VmiR56RSOG40UX8" class="rounded mx-auto d-block" alt="...">
         </div>
+    </div> 
 
-
+    <br> </br>
+    <div class="row">
         <div class="col-lg-4 clearfix col-sm-4 margint30"> 
             <h4> Habitaciones Simples </h4>
             <hr>
@@ -56,12 +56,12 @@
             </ul>
         </div>
         <div class="col-lg-8">
-        <div class="margint30" >
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSuUZJ7UccwjVugzwijh_LbxIGdGZq3OIWI6MTqa2Tjiy_fJC7q" class="img-fluid" alt="Responsive image">
+            <img width="658px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRrTjT8sTdgTjSSnA-Aw-3GlgMg-KtJvoqT2qRCR4CIt6BxaIwg" class="rounded mx-auto d-block" alt="...">
         </div>
-        </div>
+    </div>
 
-        
+    <br> </br>
+    <div class="row">   
         <div class="col-lg-4 clearfix col-sm-4 margint30"> 
             <h4>Habitaciones Dobles </h4>
             <hr>
@@ -76,11 +76,13 @@
                 <li>Cochera</li>
             </ul>
         </div>
-        <div class="col-lg-8 margint30">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQBEveW8iYkho_trCxj_B89BdIS8Us1kLMw-H8rAEtlhNVKHkAy" class="img-fluid" alt="Responsive image">
+        <div class="col-lg-8 mt-30">
+            <img width="658px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQBEveW8iYkho_trCxj_B89BdIS8Us1kLMw-H8rAEtlhNVKHkAy" class="rounded mx-auto d-block" alt="...">
         </div>
+    </div>
 
-        
+    <br> </br>
+    <div class="row">  
         <div class="col-lg-4 clearfix col-sm-4 margint30"> 
             <h4>Habitaciones ejecutivas </h4>
             <hr>
@@ -96,13 +98,14 @@
                 <li>Cochera</li>
             </ul>
         </div>
-        <div class="col-lg-8 margint30">
-            <img width="658px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQK0qXbj4mOvq1WYsapHARd592nxpIil5Y3GBrZXBk2w6BtW4rf" class="rounded mx-auto d-block" alt="...">
-            
+        <div class="col-lg-8 mt-30">
+            <img width="658px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQK0qXbj4mOvq1WYsapHARd592nxpIil5Y3GBrZXBk2w6BtW4rf" class="rounded mx-auto d-block" alt="...">         
         </div>
+    </div>
 
-        
-        <div class="col-lg-4 clearfix col-sm-4 margint30"> 
+    <br> </br>
+    <div class="row">    
+        <div class="col-lg-4 clearfix col-sm-4 mt-30"> 
             <h4>Habitaciones Junior Suite </h4>
             <hr>
             <p> Cuenta con: </p>
@@ -117,11 +120,9 @@
                 <li> Jacuzzi</li>
                 <li>Cochera</li>
             </ul>
-        </div>
-        
-        <div class="col-lg-8 margint30">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRdvrsRFFxTVLAUE9LkWpt9EVIR1as6pL1shansNvgrCTYKezGY" class="rounded mx-auto d-block" alt="...">
-           
+        </div>  
+        <div class="col-lg-8 mt-30">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRdvrsRFFxTVLAUE9LkWpt9EVIR1as6pL1shansNvgrCTYKezGY" class="rounded mx-auto d-block" alt="...">        
         </div>
     </div>
 </div>
