--- a/Views/Home/Servicios.cshtml
+++ b/Views/Home/Servicios.cshtml
@@ -1,1 +1,68 @@
-<h1>Servicios</h1>
+<div class="text-center">
+    <h1>SERVICIOS</h1>
+</div>
+
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRmxkb8IV0D58N4BQS0fZgKlsiDOdTt6VniMG9l73u0ZmkXlSsr" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+        <img src="http://hotelperunews.com/wp-content/uploads/2019/04/Fachada-Hampton-by-Hilton-Lima-San-Isidro.jpg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSTTkh51iF79_rQcxaqyxFhJhRfEHnWh8m_0SVq_BjCnjMHcyEG" class="d-block w-100">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<br> </br>
+<div class="container">
+    <div class="row">
+        <div class="title-style-1 marginb30 margint30">
+            <h3>Servicios</h3>
+             <p>
+               Los servicios que le brinda Hospedaje Piero son un conjunto de alternativas que le permitirá tener
+                una estancia tranquila y placentera.
+            </p> 
+        </div>
+    
+
+    
+        <div class="col-sm-6 m-40 ">
+            <div class="title-style-1 marginb30 margint30">
+                    <h4>Estacionamiento privado</h4>             
+                    <p>Contamos con estacionamiento privado disponible las 24 horas del día.</p>  
+
+                    <h4>Comunicaciones</h4>             
+                    <p>Llamadas nacionales e internacionales, así como acceso a conexión inalámbrica a internet (WIFI) desde la habitación y las instalaciones del Hotel.</p>         
+                    
+                    <h4>Reservas</h4>             
+                    <p>Contamos con .....</p> 
+                </div>
+        </div>
+
+        <div class="col-sm-6 m-40 ">
+            <div class="title-style-1 marginb30 margint30">
+                <h4>Seguridad</h4>             
+                <p>Brindamos custodia de documentos y objetos de valor en recepción.</p> 
+
+                <h4>Instalaciones</h4>             
+                <p>Contamos con instalaciones ...</p> 
+                <ul>
+                    <li>Recepción</li>
+                    <li>Bodega</li>                
+                </ul>
+            </div>
+        </div>
+
+    </div>
+</div>
