Agregado de habitaciones

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,7 +64,13 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" href="~/cuenta/asociarrol">Asociar Rol</a>
                                 </li>
+                                <li class="nav-item">
+                                <a class="nav-link text-dark" href="~/habitaciones/registro">Habitaciones</a>
+                            </li>
                             }
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="~/reservas/registro">Reservas</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" href="~/cuenta/logout">Cerrar sesión</a>
                             </li>
